regression-tests/test-results/apple-clang-14/mixed-function-expression-and-std-ranges-for-each-with-capture.cpp.output
mixed-function-expression-and-std-ranges-for-each-with-capture.cpp2:14:18: error: no member named 'for_each' in namespace 'std::ranges'
    std::ranges::for_each
    ~~~~~~~~~~~~~^
mixed-function-expression-and-std-ranges-for-each-with-capture.cpp2:18:18: error: no member named 'for_each' in namespace 'std::ranges'
    std::ranges::for_each( view, std::move(callback));
    ~~~~~~~~~~~~~^
2 errors generated.
